--- a/test_leo/styles/home.css
+++ b/test_leo/styles/home.css
@@ -118,6 +118,45 @@ header {
   color: #3cd65e;
 }
 
+.barra-busca {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.barra-busca input[type="text"] {
+  padding: 8px 12px;
+  border: none;
+  border-radius: 30px 0 0 30px;
+  outline: none;
+  width: 350px;
+  font-weight: bold;
+  font-size: 1rem;
+  color: #222;
+  background: #fff;
+  box-shadow: 0 2px 8px #0001;
+}
+
+.barra-busca button {
+  padding: 6.7px 10px;
+  border: none;
+  border-radius: 0 30px 30px 0;
+  background: linear-gradient(90deg, #2ecc40 0%, #363636 100%);
+  color: #fff;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: filter 0.2s;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 2px 8px #0001;
+}
+
+.barra-busca button:hover {
+  filter: brightness(1.1);
+}
+
 /* Popup do usuário */
 .user-popup {
   position: absolute;
